*SVN*

* Fixes bad rendering of JavaScriptMacrosHelper rdoc (closes #4910) [Frederick Ros]

* Allow error_messages_for to report errors for multiple objects, as well as support for customizing the name of the object in the error summary header. Closes #4186. [andrew@redlinesoftware.com, Marcel Molina Jr.]
  
  error_messages_for :account, :user, :subscription, :object_name => :account

* Enhance documentation for setting headers in integration tests. Skip auto HTTP prepending when its already there. Closes #4079. [Rick Olson]

* Documentation for AbstractRequest. Closes #4895. [kevin.clark@gmail.com] 

* Refactor various InstanceTag instance method to class methods. Closes #4800. [skaes@web.de]

* Remove all remaining references to @params in the documentation. [Marcel Molina Jr.]

* Add documentation for redirect_to :back's RedirectBackError exception.  [Marcel Molina Jr.]

* Update layout and content_for documentation to use yield rather than magic @content_for instance variables. [Marcel Molina Jr.]

* Fix assert_redirected_to tests according to real-world usage.  Also, don't fail if you add an extra :controller option: [Rick]

    redirect_to :action => 'new'
    assert_redirected_to :controller => 'monkeys', :action => 'new'

* Cache CgiRequest#request_parameters so that multiple calls don't re-parse multipart data. [Rick]

* Diff compared routing options.  Allow #assert_recognizes to take a second arg as a hash to specify optional request method [Rick]

    assert_recognizes({:controller => 'users', :action => 'index'}, 'users')
    assert_recognizes({:controller => 'users', :action => 'create'}, {:path => 'users', :method => :post})

* Diff compared options with #assert_redirected_to [Rick]

* Add support in routes for semicolon delimited "subpaths", like /books/:id;:action [Jamis Buck]

* Change link_to_function and button_to_function to (optionally) take an update_page block instead of a JavaScript string. Closes #4804. [zraii@comcast.net, Sam Stephenson]
