@@ -116,7 +116,7 @@ module ActionView
       end
       
       # Returns +text+ transformed into HTML using very simple formatting rules
-      # Surrounds paragraphs with <tt>&lt;p&gt;</tt> tags, and converts line breaks into <tt>&lt;br /&gt;</tt>
+      # Surrounds paragraphs with <tt><p></tt> tags, and converts line breaks into <tt><br/></tt>
       # Two consecutive newlines(<tt>\n\n</tt>) are considered as a paragraph, one newline (<tt>\n</tt>) is
       # considered a linebreak, three or more consecutive newlines are turned into two newlines 
       def simple_format(text)
@@ -129,7 +129,7 @@ module ActionView
       end
 
       # Turns all urls and email addresses into clickable links. The +link+ parameter can limit what should be linked.
-      # Options are :all (default), :email_addresses, and :urls.
+      # Options are <tt>:all</tt> (default), <tt>:email_addresses</tt>, and <tt>:urls</tt>.
       #
       # Example:
       #   auto_link("Go to http://www.rubyonrails.com and say hello to david@loudthinking.com") =>
@@ -235,28 +235,28 @@ module ActionView
       # array every time it is called. This can be used to alternate classes
       # for table rows:
       #
-      # <%- for item in @items do -%>
-      #   <tr class="<%= cycle("even", "odd") %>">
-      #     ... use item ...
-      #   </tr>
-      # <%- end -%>
+      #   <%- for item in @items do -%>
+      #     <tr class="<%= cycle("even", "odd") %>">
+      #       ... use item ...
+      #     </tr>
+      #   <%- end -%>
       #
       # You can use named cycles to prevent clashes in nested loops.  You'll
       # have to reset the inner cycle, manually:
       #
-      # <%- for item in @items do -%>
-      #   <tr class="<%= cycle("even", "odd", :name => "row_class")
-      #     <td>
-      #       <%- for value in item.values do -%>
-      #         <span style="color:'<%= cycle("red", "green", "blue"
-      #                                       :name => "colors") %>'">
-      #           item
-      #         </span>
-      #       <%- end -%>
-      #       <%- reset_cycle("colors") -%>
-      #     </td>
-      #   </tr>
-      # <%- end -%>
+      #   <%- for item in @items do -%>
+      #     <tr class="<%= cycle("even", "odd", :name => "row_class")
+      #       <td>
+      #         <%- for value in item.values do -%>
+      #           <span style="color:'<%= cycle("red", "green", "blue"
+      #                                         :name => "colors") %>'">
+      #             item
+      #           </span>
+      #         <%- end -%>
+      #         <%- reset_cycle("colors") -%>
+      #       </td>
+      #    </tr>
+      #  <%- end -%>
       def cycle(first_value, *values)
         if (values.last.instance_of? Hash)
           params = values.pop
