@@ -1,5 +1,7 @@
 *SVN*
 
+* Fix text_helper.rb documentation rendering. Closes #4725. [Frederick Ros]
+
 * Fixes bad rendering of JavaScriptMacrosHelper rdoc (closes #4910) [Frederick Ros]
 
 * Allow error_messages_for to report errors for multiple objects, as well as support for customizing the name of the object in the error summary header. Closes #4186. [andrew@redlinesoftware.com, Marcel Molina Jr.]
